# channest

./: CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
.github/workflows/: on-push-main.yml
channest/: __init__.py  __main__.py  _utils.py  api.py  heights.py  lengths.py  polygonize.py  skeletonize.py  summarize.py  widths.py
channest/qc/: fences.py  layerheightplot.py  layerwidthplot.py  scatterwidthheight.py  sliceplot.py  stacking.py
scripts/: check_length_estimation.py  measure_mouthbar_size.py
tests/: test_lengths.py
